# 3d-physarum

./: .dockerignore  .gitignore  DEPLOY.md  DOCKER_FIX_SUMMARY.md  Dockerfile  README.md  REPO-HEALTH.md  TODO-RESTRUCTURE.md  TODO-WEB.md  TODO.md  demo_3d.py  main.py  model_3d.py  model_3d_smooth.py  output_manager.py  physarum.py  preview_generator.py  pyproject.toml  pytest.ini  railway.toml  test_docker_deployment.py  test_docker_physarum_import.py  test_image_init.py  test_lifecycle.py  test_model_3d.py  test_model_3d_smooth.py  test_output_manager.py  test_physarum.py  test_preview_generator.py  tools.toml
.devcontainer/: README.md  devcontainer.json
.devcontainer/scripts/: common.sh  run-tests.sh  setup.sh  start-backend.sh  start-frontend.sh
cli/: demo_3d.py  main.py  physarum_3d_model.stl  pyproject.toml
output/: models.db  physarum_3d_model-1.json  physarum_3d_model.json
physarum-core/: pyproject.toml
physarum-core/physarum_core/: __init__.py
physarum-core/physarum_core/models/: __init__.py  model_3d.py  model_3d_smooth.py
physarum-core/physarum_core/output/: __init__.py  manager.py
physarum-core/physarum_core/preview/: __init__.py
physarum-core/physarum_core/utils/: __init__.py
physarum-core/tests/: test_image_init.py  test_integration.py  test_lifecycle.py  test_model_3d.py  test_model_3d_smooth.py  test_output_manager.py  test_physarum.py  test_preview_generator.py
story/: story.md
web/: README.md
web/backend/: .dockerignore  DEBUG_IMPROVEMENTS.md  Dockerfile  README.md  README_TESTING.md  pyproject.toml  requirements.txt  run_docker_tests.py  test_api_endpoints.py  test_docker.sh  test_docker_deployment.py  test_docker_integration.py  test_exception_handling.py  test_model_api.py  test_model_registry.py  test_physarum_core.py  test_skimage_docker.py
web/backend/app/: config.py  main.py
web/backend/app/api/routes/: models.py  simulation.py
web/backend/app/core/: model_registry.py  parameter_adapter.py  progress_reporter.py  simulation_manager.py
web/backend/app/models/: responses.py  simulation.py
web/backend/physarum_core/output/: __init__.py
web/backend/physarum_core/preview/: generator.py
web/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/frontend/src/: App.css  App.tsx  index.css
web/frontend/src/components/: DownloadHistory.tsx  ErrorDisplay.tsx  ModelHistory.tsx  ParameterForm.tsx  ResultsDisplay.tsx  SimulationStatus.tsx
web/frontend/src/services/: api.ts
web/frontend/src/types/: simulation.ts
web/frontend/src/utils/: errorHandling.ts  validation.ts
