[project]
name = "3d-physarum"
version = "0.1.0"
description = "3D Physarum model generation workspace"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[tool.uv.workspace]
members = [
    "physarum-core",
    "web/backend", 
    "cli"
]
