[project]
name = "3d-physarum"
version = "0.1.0"
description = "3D Physarum model generation workspace"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Workspace members
    "physarum-core",
    "physarum-web-backend",
    "physarum-cli",
    
    # Core physarum dependencies
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "pillow>=8.3.0",
    "trimesh>=3.15.0",
    "numpy-stl>=3.1.2",
    "scikit-image>=0.20.0",
    
    # Web backend dependencies
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.7",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "matplotlib>=3.5.0",
    "requests>=2.32.4",
    
    # CLI dependencies
    "click>=8.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "docker>=6.0.0",
]

[tool.uv.workspace]
members = [
    "physarum-core",
    "web/backend", 
    "cli"
]

[tool.uv.sources]
physarum-core = { workspace = true }
physarum-web-backend = { workspace = true }
physarum-cli = { workspace = true }
