[project]
name = "3d-physarum"
version = "0.1.0"
description = "3D Physarum model generation workspace"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Workspace members - their dependencies will be resolved automatically
    "physarum-core",
    "physarum-web-backend",
    "physarum-cli",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "docker>=6.0.0",
    # Include dev dependencies from workspace members
    "physarum-core[dev]",
    "physarum-web-backend[dev]",
    "physarum-cli[dev]",
]

[tool.uv.workspace]
members = [
    "physarum-core",
    "web/backend", 
    "cli"
]

[tool.uv.sources]
physarum-core = { workspace = true }
physarum-web-backend = { workspace = true }
physarum-cli = { workspace = true }
