[project]
name = "physarum-cli"
version = "1.0.0"
description = "Command-line tools for 3D Physarum model generation"
requires-python = ">=3.9"
dependencies = [
    "physarum-core",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main.py", "demo_3d.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
physarum-core = { workspace = true }