[project]
name = "physarum-core"
version = "1.0.0"
description = "Core simulation engine for 3D Physarum model generation"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.10.0",
    "pillow>=8.3.0",
    "trimesh>=3.15.0",
    "numpy-stl>=3.1.2",
    "scikit-image>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["physarum_core"]