[project]
name = "physarum-web-backend"
version = "1.0.0"
description = "Backend API for 3D Physarum model generator web application"
requires-python = ">=3.9"
dependencies = [
    "physarum-core",
    "fastapi>=0.115.14",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.7",
    "psutil>=5.9.0",
    "httpx>=0.24.0",
    "matplotlib>=3.5.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.uv.sources]
physarum-core = { workspace = true }

